<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/TopHeader"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/login_footer"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/InputHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"></LinearLayout>

    <LinearLayout
        android:id="@+id/InputHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/InputScroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pridi_semibold"
                android:text="@string/AssignmentExam"
                android:textColor="@color/green"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pridi_semibold"
                android:text="@string/Optional"
                android:textColor="@color/green"
                android:textSize="10dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/pridi_semibold"
            android:text="@string/Grade"
            android:textColor="@color/green"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/pridi_semibold"
            android:text="@string/Weight"
            android:textColor="@color/green"
            android:textSize="20dp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/InputScroll"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/AddRowButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/DynamicContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"></LinearLayout>

        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/AddRowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:fontFamily="@font/pridi_semibold"
        android:text="+ Add Row"
        android:textColor="@color/green"
        android:textSize="15sp"
        android:theme="@null"
        app:layout_constraintBottom_toTopOf="@+id/FinalGradePlanningLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputScroll" />

    <LinearLayout
        android:id="@+id/FinalGradePlanningLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/login_footer"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddRowButton">

        <TextView
            android:id="@+id/FinalGradePlanningTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5sp"
            android:background="@null"
            android:fontFamily="@font/pridi_semibold"
            android:text="Final Grade Planning (Optional)"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/FinalGradeGoalLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FinalGradePlanningLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/FinalGradeGoalTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:fontFamily="@font/pridi_semibold"
                android:gravity="center_vertical|start"
                android:text="Final Grade Goal"
                android:textColor="@color/green"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/FGGTIL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/input_bg"
                android:textColor="@color/green"
                app:boxBackgroundMode="none"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintBottom_toTopOf="@+id/EmailTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/FGGEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="Meant to be initially empty unless button is clicked!"
                    android:drawableEnd="@drawable/baseline_percent_24"
                    android:fontFamily="@font/pridi"
                    android:gravity="center_vertical|end"
                    android:hint="@null"
                    android:inputType="number"
                    android:padding="0dp"
                    android:textColor="@color/green"
                    android:textSize="20sp"
                    android:theme="@null" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/WeightRemTasksLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5sp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/CalculateClearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/CalculateClearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FinalGradeGoalLayout">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Calculate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="20sp"
            android:layout_weight="3"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/pridi_semibold"
            android:paddingHorizontal="30dp"
            android:paddingVertical="5dp"
            android:text="@string/Calculate"
            android:textColor="@color/white"
            android:textSize="30dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Clear"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:contentDescription="Icon means Clear"
            android:drawableLeft="@drawable/baseline_clear_all_24"
            android:fontFamily="@font/pridi_semibold"
            android:paddingHorizontal="25dp"
            android:paddingVertical="5dp"
            android:textColor="@color/white"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/TotalLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CalculateClearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@null"
                android:fontFamily="@font/pridi_semibold"
                android:gravity="center_vertical|start"
                android:text="Letter Grade: "
                android:textColor="@color/green"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/TotalLayoutResult"
                android:layout_width="0dp"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:background="@drawable/input_bg"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TotalViewTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/pridi_semibold"
                    android:paddingHorizontal="10dp"
                    android:text=""
                    android:textColor="@color/green"
                    android:textSize="20sp"></TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/AveGradeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TotalLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@null"
                android:fontFamily="@font/pridi_semibold"
                android:gravity="center_vertical|start"
                android:text="Average Grade: "
                android:textColor="@color/green"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:background="@drawable/input_bg"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/AverageGradeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawableEnd="@drawable/baseline_percent_24"
                    android:fontFamily="@font/pridi_semibold"
                    android:paddingEnd="10dp"
                    android:text=""
                    android:textColor="@color/green"
                    android:textSize="20sp"></TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>